--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,10 +3,19 @@ body {
     background-color: #777777;
 }
 
-.expositor {
+.wrapper {
     max-width: 1050px;
-    min-height: 50px;
-    margin: 40px auto 0 auto;
+    margin: 0 auto;
+}
+
+.header {
+    background-color: #000;
+    width: 100%;
+    height: 100px;
+}
+
+.expositor {
+    margin-top: 20px;
 }
 
 .expositor__module {
