--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,7 +10,6 @@ body {
     height: 50px;
     display: flex;
 }
-
 .header__logo {
     background-image: url('../images/test_logo.png');
     background-repeat: no-repeat;
@@ -18,14 +17,20 @@ body {
     background-size: 70%;
     flex: 1;
 }
-
 .header__menu {
     width: 70%;
     height: auto;
 }
 
+.footer {
+    background-color: #000;
+    height: 70px;
+    display: flex;
+}
+
 .expositor {
     margin: 0 auto;
+    max-width: 1000px;
     margin-top: 20px;
     max-width: 78%;
 }
@@ -50,6 +55,7 @@ body {
     .expositor__module {
         margin-top: 10px;
         width: 100%;
+        flex: 1;
     }
 
     .expositor {
