--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,10 +5,12 @@ body {
 
 .header {
     margin: 0 auto;
-    width: 78%;
+    width: 100%;
     background-color: #000;
     height: 50px;
     display: flex;
+    position: fixed;
+    top: 0;
 }
 .header__logo {
     background-image: url('../images/test_logo.png');
@@ -33,6 +35,12 @@ body {
     margin: 0 auto;
 }
 
+.separator {
+    background-color: #000;
+    widt: 100%;
+    height: 50px;
+}
+
 .expositor {
     margin: 0 auto;
     max-width: 1000px;
@@ -43,8 +51,8 @@ body {
 .expositor__module {
     background-color: #bbbbbb;
     margin-bottom: 20px;
-    width: 360px;
-    height: 280px;
+    width: 300px;
+    height: 240px;
     box-sizing: border-box;
 }
 
