--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -28,24 +28,10 @@ body {
     font-size: 120%;
 }
 
-.footer {
-    background-color: #000;
-    width: 78%;
-    height: 70px;
-    margin: 0 auto;
-}
-
-.separator {
-    background-color: #000;
-    widt: 100%;
-    height: 50px;
-}
-
 .expositor {
     margin: 0 auto;
-    max-width: 1000px;
     margin-top: 20px;
-    width: 78%;
+    width: 75%;
 }
 
 .expositor__module {
@@ -56,15 +42,41 @@ body {
     box-sizing: border-box;
 }
 
-@media (min-width: 850px) {
+.footer {
+    background-color: #000;
+    width: 100%;
+    height: 60px;
+    margin: 0 auto;
+}
+
+.separator {
+    background-color: #000;
+    widt: 100%;
+    height: 50px;
+}
+
+@media (min-width: 1100px) {
     .expositor {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
     }
+
+    .about {
+        background-color: #000;
+    }
+
+    .about__text {
+        padding: 3%;
+        font-family: arial;
+        font-size: 20px;
+        width: 60%;
+        padding-left: 5%;
+        text-align: left;
+    }
 }
 
-@media (max-width: 850px) {
+@media (max-width: 1100px) {
     .expositor__module {
         margin-top: 10px;
         width: 100%;
@@ -76,17 +88,27 @@ body {
     }
 
     .header {
-        width: 95%;
+        width: 100%;
     }
 
     .footer {
-        width: 95%;
+        width: 100%;
     }
 
     .header__menu {
         font-size: 80%;
         padding-right: 20px;
         line-height: 4em;
+    }
+
+    .about__text {
+        font-size: 0;
+    }
+
+    .mobile-separator {
+        background-color: #000;
+        widt: 100%;
+        height: 50px;
     }
 }
 
