--- a/public/styles/parallax.css
+++ b/public/styles/parallax.css
@@ -6,18 +6,18 @@
 }
 
 .parallax--first {
-    background-image: url('../images/test.jpg');
+    background-image: url('../images/small_opaque_orange.svg');
     padding-bottom: 35%;
 }
 
 .parallax--second {
-    background-image: url('../images/test_2.jpg');
+    background-image: url('../images/small_opaque_blue.svg');
     padding-bottom: 25%;
-    background-position: 0 60px;
+    /*background-position: 0 0px;*/
 }
 
 .parallax--third {
-    background-image: url('../images/test.jpg');
+    background-image: url('../images/small_transparent_grey.svg');
     padding-bottom: 25%;
 }
 
