--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,120 +1,34 @@
 body {
-    color: #aaaaaa;
-    background-color: #777777;
+    max-width: 960px;
+    margin: 0 auto 0 auto;
 }
 
-.header {
-    margin: 0 auto;
+#portfolio ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+        grid-column-gap: 30px;
+        grid-row-gap: 30px;
+}
+
+#portfolio ul li a {
+    background-color: #888888;
     width: 100%;
-    background-color: #000;
-    height: 50px;
-    display: flex;
-    position: fixed;
-    top: 0;
-}
-.header__logo {
-    background-image: url('../images/logo.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 70%;
-    flex: 1;
-}
-.header__menu {
-    width: 70%;
-    font-family: arial;
-    padding-right: 10px;
-    text-align: right;
-    line-height: 2.5em;
-    font-size: 120%;
+    height: 300px;
+    display: block;
 }
 
-.expositor {
-    margin: 0 auto;
-    margin-top: 20px;
-    width: 75%;
+#portfolio ul li a span {
+    background-color: #444444;
+    padding: 2em;
+    margin: auto;
+    top: 50%;
+    left: 50%;
+    margin-top: -50%;
+    margin-left: -50%;
+    position: relative;
+    display: inline-block;
 }
 
-.expositor__module {
-    background-color: #bbbbbb;
-    margin-bottom: 20px;
-    width: 300px;
-    height: 240px;
-    box-sizing: border-box;
+#portfolio ul li a:hover span {
+    background-color: #666666;
 }
-
-.footer {
-    background-color: #000;
-    width: 100%;
-    height: 60px;
-    margin: 0 auto;
-}
-
-.separator {
-    background-color: #000;
-    widt: 100%;
-    height: 50px;
-}
-
-@media (min-width: 1100px) {
-    .expositor {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-
-    .about {
-        background-color: #000;
-    }
-
-    .about__text {
-        padding: 3%;
-        font-family: arial;
-        font-size: 20px;
-        width: 60%;
-        padding-left: 5%;
-        text-align: left;
-    }
-}
-
-@media (max-width: 1100px) {
-    .expositor__module {
-        margin-top: 10px;
-        width: 100%;
-        flex: 1;
-    }
-
-    .expositor {
-        width: 95%;
-    }
-
-    .header {
-        width: 100%;
-    }
-
-    .footer {
-        width: 100%;
-    }
-
-    .header__menu {
-        font-size: 80%;
-        padding-right: 20px;
-        line-height: 4em;
-    }
-
-    .about__text {
-        font-size: 0;
-    }
-
-    .mobile-separator {
-        background-color: #000;
-        widt: 100%;
-        height: 50px;
-    }
-}
-
-.expositor__module:nth-child(1) {background-color: #ffffff;}
-.expositor__module:nth-child(2) {background-color: #eeeeee;}
-.expositor__module:nth-child(3) {background-color: #cccccc;}
-.expositor__module:nth-child(4) {background-color: #bbbbbb;}
-.expositor__module:nth-child(5) {background-color: #aaaaaa;}
-.expositor__module:nth-child(6) {background-color: #999999;}
